Fix footer on small devices

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -332,6 +332,11 @@ footer {
 
 footer .row {
   margin: 0;
+  @media (max-width: 768px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
 }
 
 .fab {
